# gtcv

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  gtcv.pyi  main.py  pyproject.toml  setup.py
OpenGTCV/: ClassificationModule.py  ColorModule.py  FPS.py  FaceDetectionModule.py  FaceMeshModule.py  PoseModule.py  SerialModule.py  Utils.py
gtcv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lib/python_bindings/: bindings.cpp
lib/src/: gtcv_objects.h  gtcv_signal.cpp  gtcv_signal.h  main.cpp
